# safe-llm

./: .gitignore  README.md
ai-safety-dev/: .env.example  .gitignore  docker-compose.yaml  package-lock.json  pyproject.toml
ai-safety-dev/archive/: config_local_ollama_models.yaml  experiments_custom_guardrails.py  scr_custom_guardrails.py  test_user.py
ai-safety-dev/docs/: 2026-03-24-src-code-review.md  src-code-review.md
ai-safety-dev/docs/research/: langfuse-v3-self-hosting.md  litellm-docker-deployment.md  litellm-user-management.md
ai-safety-dev/experiments/: RUNS.md  docker-compose.yaml  erisk_correlation.py  erisk_t2_browser.ipynb  erisk_t2_browser.py  erisk_to_spendlogs.py  schema.prisma  test_soft_prompt_effectiveness.py  test_tags.py
ai-safety-dev/experiments/litellm/: config.yaml  custom_guardrails.py  docker-compose.yaml.example  prompt.py
ai-safety-dev/experiments/synthetic/: __init__.py  backfill_metadata.py  db_writer.py  generator.py  pilot_routerai.py  postgen_edit.py  prompts.py  runner.py
ai-safety-dev/src/: classificators.py  config.py  config.yaml  langfuse_scraper.py  main.py  middleware.py  prompts.py  scheduler.py  schemas.py
ai-safety-dev/src/behavioral/: __init__.py  aggregator.py  behavioral_llm.py  danger_agg.py  langfuse_scores.py  models.py  repository.py  risk_engine.py  scheduler.py  (+3 more)
ai-safety-dev/tests/: conftest.py  test_aggregator_skeleton.py  test_behavioral_llm.py  test_behavioral_models.py  test_danger_agg.py  test_middleware_behavioral.py  test_risk_engine.py  test_temporal_metrics.py  test_weekly_report.py
(+247 files in other folders)
