[project]
name = "ai-safety-mikhail"
version = "0.1.0"
description = "LLM safety proxy with behavioral monitoring and crisis detection"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.11.2",
    "asyncpg>=0.31.0",
    "fastapi==0.128.4",
    "langfuse>=2.0,<3.0",
    "litellm[proxy]==1.81.8",
    "litellm-enterprise==0.1.27",
    "openai==2.17.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn==0.31.1",
    "prisma>=0.15.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
